--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="logo">
                         <a href="#"><img src="img/capi.svg" alt="logo" id="logo-home"></img>
                     </div>
-                    <div class="nav-wrapper">
+                    <div class="nav-menu">
                           <ul>
                                 <li><a href="#about" id="link-about">A Propos</a></li>
                                 <li><a href="#skill" id="link-skill">Compétences</a></li>
