--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
 
     <section class="home">
-
                 <nav>
                     <input type="checkbox" id="nav" class="hidden">
                     <label for="nav" class="nav-btn">
@@ -28,7 +27,7 @@
                     <div class="logo">
                         <a href="#"><img src="img/capi.svg" alt="logo" id="logo-home"></img>
                     </div>
-                    <div class="nav-menu">
+                    <div class="nav-wrapper">
                           <ul>
                                 <li><a href="#about" id="link-about">A Propos</a></li>
                                 <li><a href="#skill" id="link-skill">Compétences</a></li>
