Update skill content v2

--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
 
                 <div class="navigation__list-box">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><a class="navigation__link bord" href="#about" id="link-about">A propos</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#skill" id="link-skill">Compétences</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#project" id="link-project">Projets</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#contact" id="link-contact">Contact</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#about" id="link-about">A
+                                propos</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#skill"
+                                id="link-skill">Compétences</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#project"
+                                id="link-project">Projets</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#contact"
+                                id="link-contact">Contact</a></li>
                     </ul>
-                
+
             </nav>
             <div class="hero-text" id="hero-text">
                 <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
@@ -108,7 +112,7 @@
             </div>
         </section>
         <section class="skill" id="skill">
-            <div class="skill-content">
+            <!-- <div class="skill-content">
                 <div class="skill-box">
                     <div class="row">
                         <div class="skill-front">
@@ -173,87 +177,138 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="skill-illustration">
-                <img src="img/skill.svg" alt="skill">
-            </div>
-        </section>
-        <section class="project" id="project">
-            <div class="project-box">
-                <div class="project-portfolio">
-                    <div class="project-illustration">
-                        <img src="img/project/portfolio.png" alt="">
-                    </div>
-                    <div class="project-content">
-                        <h3>Portfolio personnel</h3>
-                        <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
-                            valeur mes
-                            compétences ainsi que l'étendu de mes travaux.
-                            Celui-ci sera en constante évolution.
-                            L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones
-                            (Icon8)
-                            et les librairies (jQuery, Scrollreveal).
-                        </p>
-                        <div class="box-stack">
-                            <p class="highlith-stack">HTML</p>
-                            <p class="highlith-stack">CSS</p>
-                            <p class="highlith-stack">Javascript</p>
+            </div> -->
+            <div class="skill__content">
+                <div class="skill__box">
+                        <div class="skill__box-tech">
+                            <div>
+                                <h3>💻 Techno & Frameworks</h3>
+                            </div>
+                            <div class="skill__box-picture">
+                                <div>
+                                    <img src="img/skill/html.svg" alt="Html">
+                                </div>
+                                <div>
+                                    <img src="img/skill/css.svg" alt="Css">
+                                </div>
+                                <div>
+                                    <img src="img/skill/javascript.svg" alt="Javascript">
+                                </div>
+                                <div>
+                                    <img src="img/skill/c_sharp.svg" alt="C#">
+                                </div>
+                                <div>
+                                    <img src="img/skill/php.svg" alt="PHP">
+                                </div>
+                            </div>
                         </div>
-                        <div class="box-link">
-                            <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
-                            <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
-                                target="_blank">Voir la Source ⇢</a>
-                            <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
-                            <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <section class="contact" id="contact">
-            <div class="contact-content">
-                <div class="contact-header">
-                    <div class="contact-header-title">
-                        <h3>Une information ? Une question ?</h3>
-                    </div>
-                    <div class="contact-header-intro">
-                        <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
-                            collaboration ou simplement pour discuter!</p>
-                    </div>
-                    <div class="contact-button">
-                        <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
-                    </div>
-                </div>
-                <div class="contact-box">
-                    <div class="contact-coordinates">
-                        <h3>Coordonnées</h3>
-                    </div>
-                    <div class="box-mail">
-                        <div><img src="img/contact/email.svg" alt=""></div>
-                        <div>
-                            <p>g.edouardc@gmail.com</p>
-                        </div>
-                    </div>
-                    <div class="box-location">
-                        <div><img src="img/contact/location.svg" alt=""></div>
-                        <div>
-                            <p>57000 - Metz</p>
+                        <div class="skill__box-tool">
+                            <div>
+                                <h3>⚗️ Outils & Environnement</h3>
+                            </div>
+                            <div class="skill__box-picture">
+                                <div>
+                                    <img src="img/skill/bulma.svg" alt="Bulma" class="icon-bulma">
+                                </div>
+                                <div>
+                                    <img src="img/skill/xamarin.svg" alt="Xamarin">
+                                </div>
+                                <div>
+                                    <img src="img/skill/git.svg" alt="Git">
+                                </div>
+                                <div>
+                                    <img src="img/skill/github.svg" alt="Github">
+                                </div>
+                                <div>
+                                    <img src="img/skill/adobexd.svg" alt="Adobe XD">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="skill__illustration">
+                    <img src="img/skill.svg" alt="skill">
+                </div>
             </div>
-            <div class="contact-illustration">
-                <img src="img/contact/as.svg" alt="">
-            </div>
-        </section>
-        <button id="btn-top">
-            <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
-        </button>
+            
     </div>
-        <footer>
-            <p>© 2019 | capicode.github.io 👻</p>
-        </footer>
+    </section>
+    <section class="project" id="project">
+        <div class="project-box">
+            <div class="project-portfolio">
+                <div class="project-illustration">
+                    <img src="img/project/portfolio.png" alt="">
+                </div>
+                <div class="project-content">
+                    <h3>Portfolio personnel</h3>
+                    <p class="desc">Ce premier projet est un portfolio réalisé pour mettre en
+                        valeur mes
+                        compétences ainsi que l'étendu de mes travaux.
+                        Celui-ci sera en constante évolution.
+                        L'interface utilisateur exploite principalement le standard CSS3 (Flexbox), les îcones
+                        (Icon8)
+                        et les librairies (jQuery, Scrollreveal).
+                    </p>
+                    <div class="box-stack">
+                        <p class="highlith-stack">HTML</p>
+                        <p class="highlith-stack">CSS</p>
+                        <p class="highlith-stack">Javascript</p>
+                    </div>
+                    <div class="box-link">
+                        <img src="img/project/merge.png" class="icon-merge logo-animated " alt="Source">
+                        <a href="https://github.com/CapiCode/capicode.github.io" class="btn-project"
+                            target="_blank">Voir la Source ⇢</a>
+                        <img src="img/project/world.png" class="icon-world logo-animated " alt="Website">
+                        <a href="https://capicode.github.io/" class="btn-project">Visiter ⇢</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <div class="contact-content">
+            <div class="contact-header">
+                <div class="contact-header-title">
+                    <h3>Une information ? Une question ?</h3>
+                </div>
+                <div class="contact-header-intro">
+                    <p>Vous pouvez me contacter pour tout renseignements, que ce soit pour une proposition de
+                        collaboration ou simplement pour discuter!</p>
+                </div>
+                <div class="contact-button">
+                    <a href="mailto:g.edouardc@gmail.com">Contact ⇢</a>
+                </div>
+            </div>
+            <div class="contact-box">
+                <div class="contact-coordinates">
+                    <h3>Coordonnées</h3>
+                </div>
+                <div class="box-mail">
+                    <div><img src="img/contact/email.svg" alt=""></div>
+                    <div>
+                        <p>g.edouardc@gmail.com</p>
+                    </div>
+                </div>
+                <div class="box-location">
+                    <div><img src="img/contact/location.svg" alt=""></div>
+                    <div>
+                        <p>57000 - Metz</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact-illustration">
+            <img src="img/contact/as.svg" alt="">
+        </div>
+    </section>
+    <button id="btn-top">
+        <div class="index"><img src="img/index.png" class="fas fa-angle-double-up logo-animated"></img></div>
+    </button>
+    </div>
+    <footer>
+        <p>© 2019 | capicode.github.io 👻</p>
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="libs/scrollreveal/dist/scrollreveal.js"></script>
     <script src="app.js"></script>
