--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="home">
             <nav class="navigation">
                 <div class="navigation__logo-box">
-                    <a class="navigation__logo" href="index.html">CapiCode</a>
+                    <a class="navigation__logo" href="index.html" id="link-home">CapiCode</a>
                 </div>
 
                 <div class="navigation__list-box">
@@ -60,7 +60,7 @@
                 <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
                 <h2>Bienvenue sur mon site web personnel <img src="img/globe.png" alt="Globe"></h2>
             </div>
-            <a href="#" id="icon-arrow">
+            <a href="#" id="icon-arrow" class="icon-arrow">
                 <img src="img/arrow_bottom.svg" alt="Bottom" class="arrow">
             </a>
         </section>
