--- a/index.html
+++ b/index.html
@@ -48,16 +48,20 @@
 
                 <div class="navigation__list-box">
                     <ul class="navigation__list">
-                        <li class="navigation__item"><a class="navigation__link bord" href="#about" id="link-about">A propos</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#skill" id="link-skill">Compétences</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#project" id="link-project">Projets</a></li>
-                        <li class="navigation__item"><a class="navigation__link bord" href="#contact" id="link-contact">Contact</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#about" id="link-about">A
+                                propos</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#skill"
+                                id="link-skill">Compétences</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#project"
+                                id="link-project">Projets</a></li>
+                        <li class="navigation__item"><a class="navigation__link bord" href="#contact"
+                                id="link-contact">Contact</a></li>
                     </ul>
 
             </nav>
             <div class="hero-text" id="hero-text">
                 <h1>Salut! <img src="img/hand.png" class="viber" alt="Hand"></h1>
-                <h2>Bienvenue sur mon site web personnel <img src="img/globe.png" alt="Globe"></h2>
+                <h2>Bienvenue sur mon portfolio<img src="img/globe.png" alt="Globe"></h2>
             </div>
             <a href="#" id="icon-arrow" class="icon-arrow">
                 <img src="img/arrow_bottom.svg" alt="Bottom" class="arrow">
@@ -69,25 +73,19 @@
             </div>
             <div class="about__content">
                 <div>
-                    <h1>Je suis <span class="title-color">CapiCode</span>👻 Autodidacte en développement
-                        <span class="border-row" id="row"></span></h1>
+                    <h1>Je suis <span class="title-color">CapiCode</span>
+                        <span class="" id="row"></span></h1>
                 </div>
                 <div>
                     <p>
-                        Fasciné par les <span class="highlith">nouvelles technologies</span> de manière générale et plus
-                        particulièrement de
-                        développement.
+                        Actuellement étudiant en formation de <span class="highlith">Technicien
+                            Développeur</span> spécialisé dans la <span class="highlith">conception web design</span> et
+                        <span class="highlith">intégration de sites web</span>.
+                        Etant assoiffé de connaissances et de nouvelles technologies de
+                        manière générale, je passe la majorité partie de mon temps libre à décupler mes compétences ainsi qu'à lire des articles, blogs.
                         Tombé par hasard dans <span class="highlith">l'univers du code</span>, j'ai commencé par créer
-                        des
-                        morceaux de codes par curiosité
-                        et aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> et
-                        depuis
-                        peu de légères applications
-                        mobile pour donner vie à mes idées.
-                        Aujourd'hui, je suis en formation de <span class="highlith">Technicien Développeur</span> en
-                        apprentissage pour 2 ans.
-                        Ce parcours m'attire particulièrement car il offre des cours axés sur la <span
-                            class="highlith">conception web</span> et <span class="highlith">mobile</span>.
+                        des morceaux de codes par curiosité,
+                        aujourd'hui je réalise avec passion de <span class="highlith">fines créations</span> pour donner vie à mes idées.
                         J'adore <span class="highlith">apprendre</span> de mon côté, de façon à rester en <span
                             class="highlith">veille permanente</span>.
                     </p>
@@ -113,57 +111,56 @@
         <section class="skill" id="skill">
             <div class="skill__content">
                 <div class="skill__box">
-                        <div class="skill__box-tech">
+                    <div class="skill__box-tech">
+                        <div>
+                            <h3>💻 Techno & Frameworks</h3>
+                        </div>
+                        <div class="skill__box-picture">
                             <div>
-                                <h3>💻 Techno & Frameworks</h3>
+                                <img src="img/skill/html.svg" alt="Html">
                             </div>
-                            <div class="skill__box-picture">
-                                <div>
-                                    <img src="img/skill/html.svg" alt="Html">
-                                </div>
-                                <div>
-                                    <img src="img/skill/css.svg" alt="Css">
-                                </div>
-                                <div>
-                                    <img src="img/skill/javascript.svg" alt="Javascript">
-                                </div>
-                                <div>
-                                    <img src="img/skill/c_sharp.svg" alt="C#">
-                                </div>
-                                <div>
-                                    <img src="img/skill/php.svg" alt="PHP">
-                                </div>
+                            <div>
+                                <img src="img/skill/css.svg" alt="Css">
+                            </div>
+                            <div>
+                                <img src="img/skill/javascript.svg" alt="Javascript">
+                            </div>
+                            <div>
+                                <img src="img/skill/c_sharp.svg" alt="C#">
+                            </div>
+                            <div>
+                                <img src="img/skill/php.svg" alt="PHP">
                             </div>
                         </div>
-                        <div class="skill__box-tool">
+                    </div>
+                    <div class="skill__box-tool">
+                        <div>
+                            <h3>⚗️ Outils & Environnement</h3>
+                        </div>
+                        <div class="skill__box-picture">
                             <div>
-                                <h3>⚗️ Outils & Environnement</h3>
+                                <img src="img/skill/bulma.svg" alt="Bulma" class="icon-bulma">
                             </div>
-                            <div class="skill__box-picture">
-                                <div>
-                                    <img src="img/skill/bulma.svg" alt="Bulma" class="icon-bulma">
-                                </div>
-                                <div>
-                                    <img src="img/skill/xamarin.svg" alt="Xamarin">
-                                </div>
-                                <div>
-                                    <img src="img/skill/git.svg" alt="Git">
-                                </div>
-                                <div>
-                                    <img src="img/skill/github.svg" alt="Github">
-                                </div>
-                                <div>
-                                    <img src="img/skill/adobexd.svg" alt="Adobe XD">
-                                </div>
+                            <div>
+                                <img src="img/skill/xamarin.svg" alt="Xamarin">
+                            </div>
+                            <div>
+                                <img src="img/skill/git.svg" alt="Git">
+                            </div>
+                            <div>
+                                <img src="img/skill/github.svg" alt="Github">
+                            </div>
+                            <div>
+                                <img src="img/skill/adobexd.svg" alt="Adobe XD">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="skill__illustration">
-                    <img src="img/skill.svg" alt="skill">
-                </div>
             </div>
-            
+            <!-- <div class="skill__illustration">
+                <img src="img/skill.svg" alt="skill">
+            </div> -->
+    </div>
     </div>
     </section>
     <section class="project" id="project">
